--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+/* 
+// Contributors:
+//  Luke Arvey - 1 Hour
+//  Ridley Wills - 3 Hours
+//  Tristan Van - 1 Hour
+*/
+
 @import "tailwindcss";
 
 :root {
